--- a/Resources/Private/Partials/Form/Field/Input.html
+++ b/Resources/Private/Partials/Form/Field/Input.html
@@ -1,19 +1,16 @@
 {namespace vh=In2code\Powermail\ViewHelpers}
 
 <div id="powermail_fieldwrap_{field.uid}" class="powermail_fieldwrap powermail_fieldwrap_input powermail_fieldwrap_{field.uid} {field.css}">
-<h2>
-    {field.txMultifieldValidationPowermailText}
-</h2>
 <label for="powermail_field_{field.marker}" class="powermail_label" title="{field.description}">
     <vh:string.escapeLabels>{field.title}</vh:string.escapeLabels><f:if condition="{field.mandatory}"><span class="mandatory">*</span></f:if>
 </label>
-<f:if condition="{field.txMultifieldValidationPowermailReadonly}">
+<f:if condition="{field.txMultifieldValidationPowermailText}">
     <f:then>
         <f:form.textfield
                 type="{vh:Validation.FieldTypeFromValidation(field:field)}"
                 property="{field.marker}"
                 placeholder="{field.placeholder}"
-                readonly="readonly"
+                data-multi-field-id="{field.txMultifieldValidationPowermailText}"
                 value="{vh:Misc.PrefillField(field:field, mail:mail)}"
                 class="powermail_field powermail_input {vh:Validation.ErrorClass(field:field, class:'powermail_field_error')}"
                 additionalAttributes="{vh:Validation.ValidationDataAttribute(field:field)}"
