--- a/Resources/Private/Partials/Form/Field/Input.html
+++ b/Resources/Private/Partials/Form/Field/Input.html
@@ -1,31 +1,37 @@
 {namespace vh=In2code\Powermail\ViewHelpers}
 
-<div id="powermail_fieldwrap_{field.uid}" class="powermail_fieldwrap powermail_fieldwrap_input powermail_fieldwrap_{field.uid} {field.css}">
-<label for="powermail_field_{field.marker}" class="powermail_label" title="{field.description}">
-    <vh:string.escapeLabels>{field.title}</vh:string.escapeLabels><f:if condition="{field.mandatory}"><span class="mandatory">*</span></f:if>
-</label>
-<f:if condition="{field.txMultifieldValidationPowermailText}">
-    <f:then>
-        <f:form.textfield
-                type="{vh:Validation.FieldTypeFromValidation(field:field)}"
-                property="{field.marker}"
-                placeholder="{field.placeholder}"
-                data-multi-field-id="{field.txMultifieldValidationPowermailText}"
-                value="{vh:Misc.PrefillField(field:field, mail:mail)}"
-                class="powermail_field powermail_input {vh:Validation.ErrorClass(field:field, class:'powermail_field_error')}"
-                additionalAttributes="{vh:Validation.ValidationDataAttribute(field:field)}"
-                id="powermail_field_{field.marker}" />
-    </f:then>
-    <f:else>
-        <f:form.textfield
-                type="{vh:Validation.FieldTypeFromValidation(field:field)}"
-                property="{field.marker}"
-                placeholder="{field.placeholder}"
-                value="{vh:Misc.PrefillField(field:field, mail:mail)}"
-                class="powermail_field powermail_input {vh:Validation.ErrorClass(field:field, class:'powermail_field_error')}"
-                additionalAttributes="{vh:Validation.ValidationDataAttribute(field:field)}"
-                id="powermail_field_{field.marker}" />
-    </f:else>
-</f:if>
-
+<div
+    class="powermail_fieldwrap powermail_fieldwrap_type_input powermail_fieldwrap_{field.marker} {field.css} {settings.styles.framework.fieldAndLabelWrappingClasses}"
+>
+    <f:render partial="Form/FieldLabel" arguments="{_all}" />
+    <f:if condition="{field.txMultifieldValidationPowermailText}">
+        <f:then>
+            <div class="{settings.styles.framework.fieldWrappingClasses}">
+                <f:form.textfield
+                    type="{vh:validation.fieldTypeFromValidation(field:field)}"
+                    property="{field.marker}"
+                    placeholder="{field.placeholder}"
+                    value="{vh:misc.prefillField(field:field, mail:mail)}"
+                    class="multi_field powermail_input {settings.styles.framework.fieldClasses} {vh:validation.errorClass(field:field, class:'powermail_field_error')}"
+                    additionalAttributes="{vh:validation.validationDataAttribute(field:field)}"
+                    data-multifield=""
+                    data-multifield-group="{field.txMultifieldValidationPowermailText}"
+                    id="powermail_field_{field.marker}"
+                />
+            </div>
+        </f:then>
+        <f:else>
+            <div class="{settings.styles.framework.fieldWrappingClasses}">
+                <f:form.textfield
+                    type="{vh:validation.fieldTypeFromValidation(field:field)}"
+                    property="{field.marker}"
+                    placeholder="{field.placeholder}"
+                    value="{vh:misc.prefillField(field:field, mail:mail)}"
+                    class="powermail_input {settings.styles.framework.fieldClasses} {vh:validation.errorClass(field:field, class:'powermail_field_error')}"
+                    additionalAttributes="{vh:validation.validationDataAttribute(field:field)}"
+                    id="powermail_field_{field.marker}"
+                />
+            </div>
+        </f:else>
+    </f:if>
 </div>
