--- a/Resources/Private/Partials/Form/Field/Input.html
+++ b/Resources/Private/Partials/Form/Field/Input.html
@@ -1,37 +1,32 @@
+
 {namespace vh=In2code\Powermail\ViewHelpers}
 
-<div
-    class="powermail_fieldwrap powermail_fieldwrap_type_input powermail_fieldwrap_{field.marker} {field.css} {settings.styles.framework.fieldAndLabelWrappingClasses}"
->
-    <f:render partial="Form/FieldLabel" arguments="{_all}" />
-    <f:if condition="{field.txMultifieldValidationPowermailText}">
+<div class="powermail_fieldwrap powermail_fieldwrap_type_input powermail_fieldwrap_{field.marker} {field.css} {settings.styles.framework.fieldAndLabelWrappingClasses}">
+	<f:render partial="Form/FieldLabel" arguments="{_all}" />
+    <f:if condition="{!field.txMultifieldValidationPowermailText}">
         <f:then>
             <div class="{settings.styles.framework.fieldWrappingClasses}">
                 <f:form.textfield
-                    type="{vh:validation.fieldTypeFromValidation(field:field)}"
-                    property="{field.marker}"
-                    placeholder="{field.placeholder}"
-                    value="{vh:misc.prefillField(field:field, mail:mail)}"
-                    class="multi_field powermail_input {settings.styles.framework.fieldClasses} {vh:validation.errorClass(field:field, class:'powermail_field_error')}"
-                    additionalAttributes="{vh:validation.validationDataAttribute(field:field)}"
-                    data-multifield=""
-                    data-multifield-group="{field.txMultifieldValidationPowermailText}"
-                    id="powermail_field_{field.marker}"
-                />
+                        type="{vh:validation.fieldTypeFromValidation(field:field)}"
+                        property="{field.marker}"
+                        placeholder="{field.placeholder}"
+                        value="{vh:misc.prefillField(field:field, mail:mail)}"
+                        class="powermail_input {settings.styles.framework.fieldClasses} {vh:validation.errorClass(field:field, class:'powermail_field_error')}"
+                        additionalAttributes="{vh:validation.validationDataAttribute(field:field)}"
+                        id="powermail_field_{field.marker}" />
             </div>
         </f:then>
         <f:else>
             <div class="{settings.styles.framework.fieldWrappingClasses}">
                 <f:form.textfield
-                    type="{vh:validation.fieldTypeFromValidation(field:field)}"
-                    property="{field.marker}"
-                    placeholder="{field.placeholder}"
-                    value="{vh:misc.prefillField(field:field, mail:mail)}"
-                    class="powermail_input {settings.styles.framework.fieldClasses} {vh:validation.errorClass(field:field, class:'powermail_field_error')}"
-                    additionalAttributes="{vh:validation.validationDataAttribute(field:field)}"
-                    id="powermail_field_{field.marker}"
-                />
-            </div>
+                        type="{vh:validation.fieldTypeFromValidation(field:field)}"
+                        property="{field.marker}"
+                        placeholder="{field.placeholder}"
+                        value="{vh:misc.prefillField(field:field, mail:mail)}"
+                        class="powermail_input {settings.styles.framework.fieldClasses} {vh:validation.errorClass(field:field, class:'powermail_field_error')} js-multifield js-multifield-group-{field.txMultifieldValidationPowermailText}"
+                        additionalAttributes="{vh:validation.validationDataAttribute(field:field)} "
+                        id="powermail_field_{field.marker}" />
+            </div>            
         </f:else>
     </f:if>
 </div>
